syntax = "proto3";
package bze.v1.rewards;

import "gogoproto/gogo.proto";
import "rewards/params.proto";
import "rewards/staking_reward.proto";
import "rewards/trading_reward.proto";
import "rewards/staking_reward_participant.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/bze-alphateam/bze/x/rewards/types";

// GenesisState defines the rewards module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated StakingReward staking_reward_list = 2 [(gogoproto.nullable) = false];
  uint64 staking_rewards_counter = 3;
  uint64 trading_rewards_counter = 4;

  repeated TradingReward active_trading_reward_list = 5 [(gogoproto.nullable) = false];
  repeated TradingReward pending_trading_reward_list = 6 [(gogoproto.nullable) = false];
  repeated StakingRewardParticipant staking_reward_participant_list = 7 [(gogoproto.nullable) = false];
  repeated PendingUnlockParticipant pending_unlock_participant_list = 8 [(gogoproto.nullable) = false];
  repeated TradingRewardLeaderboard trading_reward_leaderboard_list = 9 [(gogoproto.nullable) = false];
  repeated TradingRewardCandidate trading_reward_candidate_list = 10 [(gogoproto.nullable) = false];
  repeated MarketIdTradingRewardId market_id_trading_reward_id_list = 11 [(gogoproto.nullable) = false];
  repeated TradingRewardExpiration pending_trading_reward_expiration_list = 12 [(gogoproto.nullable) = false];
  repeated TradingRewardExpiration active_trading_reward_expiration_list = 13 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
